--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "require": {
     "php": ">=7.4.0",
     "ext-ctype": "*",
+    "ext-curl": "*",
     "ext-fileinfo": "*",
     "ext-iconv": "*",
     "ext-json": "*",
@@ -67,13 +68,6 @@
     "psr-4": {
       "App\\Tests\\": "tests/"
     }
-  },
-  "replace": {
-    "paragonie/random_compat": "2.*",
-    "symfony/polyfill-ctype": "*",
-    "symfony/polyfill-iconv": "*",
-    "symfony/polyfill-php70": "*",
-    "symfony/polyfill-php56": "*"
   },
   "scripts": {
     "auto-scripts": {
