--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,6 @@ script:
   # this checks that Doctrine's mapping configurations are valid
   - ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
   # run unit tests
-  - ./vendor/bin/phpunit --exclude-group=api tests
+  - ./bin/phpunit --exclude-group=api tests
   # this runs the static code analyzer
   - ./vendor/bin/phpstan analyse src tests
