--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_script:
   - bin/console doctrine:migrations:migrate  --env=test --no-interaction
   - bin/console doctrine:fixtures:load  --env=test --no-interaction
   - bin/console cache:clear --env=test --no-interaction
+  - bin/console cache:clear --env=dev --no-interaction
 
 script:
   # this checks that the source code follows the Symfony Code Syntax rules
@@ -47,4 +48,4 @@ script:
   # run unit tests
   - ./bin/phpunit --exclude-group=api tests
   # this runs the static code analyzer
-  - ./vendor/bin/phpstan analyse --no-progress
+  - ./vendor/bin/phpstan analyse --no-progress src
