--- a/config/packages/test/monolog.yaml
+++ b/config/packages/test/monolog.yaml
@@ -4,7 +4,7 @@ monolog:
             type: fingers_crossed
             action_level: error
             handler: nested
-            #excluded_http_codes: [404, 405]
+            excluded_http_codes: [404, 405]
             channels: ["!event"]
         nested:
             type: stream
