installs symfony/twig-bundle recipe.
renames layout template to base template to realign with recipe.

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,7 @@ twig:
     default_path: "%kernel.project_dir%/templates"
     debug: "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    exception_controller: null
     globals:
         default_locale: "%kernel.default_locale%"
         supported_locales: "%supported_locales%"
