--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 /.env.local
 /.env.local.php
 /.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
-/src/.preload.php
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
