replaces deprecated kernel property with its successor.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -43,7 +43,7 @@ services:
         bind:
             $cacheExpiration: '%cache_expiration%'
             $emailSenderAddress: '%email_sender_address%'
-            $kernelRootDirectory: '%kernel.root_dir%'
+            $kernelProjectDirectory: '%kernel.project_dir%'
             $gameName: '%game_name%'
             $publisherName: '%publisher_name%'
 
