--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "ext-json": "*",
     "ext-mbstring": "*",
     "ext-pdo": "*",
+    "doctrine/annotations": "^1.0",
     "doctrine/doctrine-bundle": "^2.2",
     "doctrine/doctrine-fixtures-bundle": "^3.3",
     "doctrine/doctrine-migrations-bundle": "^2.0",
@@ -25,6 +26,7 @@
     "jms/i18n-routing-bundle": "@stable",
     "nelmio/api-doc-bundle": "^3.6",
     "nelmio/cors-bundle": "^2.1",
+    "phpdocumentor/reflection-docblock": "^5.2",
     "ramsey/uuid-doctrine": "^1.5",
     "sensio/framework-extra-bundle": "^5.0.0",
     "sensiolabs/security-checker": "^6.0",
@@ -37,6 +39,9 @@
     "symfony/monolog-bundle": "3.6.*",
     "symfony/polyfill-apcu": "^1.0",
     "symfony/polyfill-mbstring": "^1.14.0",
+    "symfony/property-access": "4.4.*",
+    "symfony/property-info": "4.4.*",
+    "symfony/serializer": "4.4.*",
     "symfony/swiftmailer-bundle": "^3.3.1",
     "symfony/templating": "^4",
     "symfony/yaml": "^5.1",
