--- a/composer.json
+++ b/composer.json
@@ -55,8 +55,8 @@
     "phpstan/phpstan": "^0.12.31",
     "phpstan/phpstan-symfony": "^0.12.7",
     "squizlabs/php_codesniffer": "@stable",
-    "symfony/browser-kit": "@stable",
-    "symfony/phpunit-bridge": "^5.1"
+    "symfony/browser-kit": "4.4.*",
+    "symfony/phpunit-bridge": "4.4.*"
   },
   "config": {
     "preferred-install": {
