--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,14 +1,14 @@
 twig:
-    default_path: "%kernel.project_dir%/templates"
-    debug: "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    default_path: '%kernel.project_dir%/templates'
+    debug: '%kernel.debug%'
+    strict_variables: '%kernel.debug%'
     exception_controller: null
     globals:
-        default_locale: "%kernel.default_locale%"
-        supported_locales: "%supported_locales%"
+        default_locale: '%kernel.default_locale%'
+        supported_locales: '%supported_locales%'
         cards_data: '@App\Services\CardsData'
         deck_validation_helper: '@App\Services\DeckValidationHelper'
-        google_analytics_tracking_code: "%google_analytics_tracking_code%"
-        allow_search_engine_tracking: "%allow_search_engine_tracking%"
+        google_analytics_tracking_code: '%google_analytics_tracking_code%'
+        allow_search_engine_tracking: '%allow_search_engine_tracking%'
     form_themes:
-        - "bootstrap_3_layout.html.twig"
+        - 'bootstrap_3_layout.html.twig'
