exclude auto-generated kernel file from code sniffler.

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -17,5 +17,5 @@
     <file>tests/</file>
 
     <exclude-pattern>tests/bootstrap.php</exclude-pattern>
-
+    <exclude-pattern>src/Kernel.php</exclude-pattern>
 </ruleset>
