--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -7,9 +7,10 @@ doctrine:
         #server_version: '5.7'
 
         # only needed for MySQL
-        charset: UTF8
+        charset: utf8mb4
         default_table_options:
-            collate: utf8_unicode_ci
+            charset: utf8mb4
+            collate: utf8mb4_unicode_ci
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
