update symfony flex and whitelist plugins.

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,12 @@
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "composer/package-versions-deprecated": true,
+      "phpstan/extension-installer": true,
+      "symfony/flex": true
+    }
   },
   "autoload": {
     "psr-4": {
