--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,7 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    paths:
+        "%kernel.project_dir%/src/Resources/FOSOAuthServerBundle/views" : FOSOAuthServerBundle
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     exception_controller: null
