--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -61,7 +61,10 @@ security:
         - { path: ^/remind, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/api/public, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/oauth2, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/oauth2/user, role: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/oauth2/decks, role: ROLE_READ_DECK }
+        - { path: ^/api/oauth2/deck/load, role: ROLE_READ_DECK }
+        - { path: ^/api/oauth2/deck/save, role: ROLE_WRITE_DECK }
         - { path: ^/js/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/deck/view/, role: IS_AUTHENTICATED_ANONYMOUSLY }
