--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "symfony/console": "4.4.*",
     "symfony/dotenv": "4.4.*",
     "symfony/flex": "^1.3.1",
+    "symfony/form": "4.4.*",
     "symfony/framework-bundle": "^4.4",
     "symfony/monolog-bundle": "3.7.*",
     "symfony/polyfill-apcu": "^1.0",
