--- a/.env
+++ b/.env
@@ -34,7 +34,8 @@ APP_SECRET=ThisTokenIsNotSoSecretChangeIt
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
