adds call-to-action to the work-in-progress disclaimers on unreleased cards.

--- a/.env
+++ b/.env
@@ -56,6 +56,8 @@ APP_WEBSITE_URL=thronesdb.com
 APP_GAME_NAME="A Game of Thrones"
 APP_PUBLISHER_NAME="Fantasy Flight Games"
 
+APP_DESIGN_TEAM_DISCORD_URL=
+
 # Analytics & AdSense
 APP_GOOGLE_ANALYTICS_TRACKING_CODE=UA-00000000-1
 
