--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   },
   "homepage": "https://github.com/thronesdb/thronesdb#readme",
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "del": "^8.0.0",
-    "eslint": "^7.15.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.1.0",
+    "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
+    "globals": "^16.2.0",
     "gulp": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-rev": "^11.0.0",
