--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "@eslint/js": "^9.27.0",
     "del": "^8.0.0",
     "eslint": "^8.57.1",
-    "eslint-config-standard": "^17.1.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-prettier": "^5.4.0",
     "globals": "^16.2.0",
     "gulp": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-rev": "^11.0.0",
-    "gulp-sourcemaps": "^3.0.0"
+    "gulp-sourcemaps": "^3.0.0",
+    "prettier": "3.5.3"
   }
 }
